test/src/main/java/spring/test/mentor/error/MentorNotFoundException.java
//package spring.test.mentor.error;
//
//import org.springframework.data.crossstore.ChangeSetPersister;
//import org.springframework.http.HttpStatus;
//import org.springframework.web.bind.annotation.ResponseStatus;
//
//import java.util.Map;
//@ResponseStatus(value = HttpStatus.NOT_FOUND, reason = "no mentor found in the database with the provided id")
//public class MentorNotFoundException extends RuntimeException {
//}
